--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -361,6 +361,8 @@ bindsym $mod+p exec --no-startup-id $term -e "ncmpcpp"
 # Sreen brightness controls
 bindsym XF86MonBrightnessUp exec --no-startup-id $XDG_DATA_HOME/scripts/brightness.sh -inc
 bindsym XF86MonBrightnessDown exec --no-startup-id $XDG_DATA_HOME/scripts/brightness.sh -dec
+bindsym Shift+XF86MonBrightnessUp exec --no-startup-id $XDG_DATA_HOME/scripts/brightness.sh -inc 1
+bindsym Shift+XF86MonBrightnessDown exec --no-startup-id $XDG_DATA_HOME/scripts/brightness.sh -dec 1
 
 # Sound controls
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5%
