feat: update my neovim config

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -9,5 +9,6 @@
     "prettier.requireConfig": true,
     "suggest.echodocSupport": true,
     "suggest.maxCompleteItemCount": 20,
-    "tslint.autoFixOnSave": true
+    "tslint.autoFixOnSave": true,
+    "tsserver.npm": "/usr/bin/npm"
 }
