fix: disable key repeat time

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,9 @@
 # No delay for escape key press
 set -sg escape-time 0
 
+# No delay when spamming key
+set -g repeat-time 0
+
 # History
 set -g history-limit 10000
 
