--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -84,13 +84,11 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
 # Panel {
    # Focus {
       # Vim like shortcuts
-      is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-          | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
-      bind-key -n M-h if-shell "$is_vim" "send-keys M-h"  "select-pane -L"
-      bind-key -n M-j if-shell "$is_vim" "send-keys M-j"  "select-pane -D"
-      bind-key -n M-k if-shell "$is_vim" "send-keys M-k"  "select-pane -U"
-      bind-key -n M-l if-shell "$is_vim" "send-keys M-l"  "select-pane -R"
-      #bind-key -n M-\ if-shell "$is_vim" "send-keys M-\\" "select-pane -l"
+      bind-key -n M-h select-pane -L
+      bind-key -n M-j select-pane -D
+      bind-key -n M-k select-pane -U
+      bind-key -n M-l select-pane -R
+      bind-key -n M-\\ select-pane -l
       bind-key -T copy-mode-vi M-h select-pane -L
       bind-key -T copy-mode-vi M-j select-pane -D
       bind-key -T copy-mode-vi M-k select-pane -U
