refactor: unset mode-style to get automatic colors in copy mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -159,8 +159,8 @@ set -g clock-mode-style 24
 set -g message-style fg=colour5,bg=default
 # Command message
 set -g message-command-style bg=default,fg=default
-# Mode
-set -g mode-style fg=colour3
+# Mode (highlight in copy mode)
+#set -g mode-style fg=colour3,bg=white
 # visual notification of activity in other windows
 set -g monitor-activity on
 # Left side of status bar
