refactor: change colors to look better on light/dark

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -133,7 +133,7 @@ set -gw xterm-keys on
 
 ## Theme settings mixed with colors (unfortunately, but there is no cleaner way)
 # Basic status bar colors
-set -g status-style bright,bg='#1B2B34',fg=default
+set -g status-style bright,bg=default,fg=default
 # Window status
 set -g window-status-format " #I:#W#F "
 set -g window-status-current-format " #I:#W#F "
@@ -146,9 +146,9 @@ set -g window-status-separator ""
 # Window status alignment
 set -g status-justify centre
 # Pane border
-set -g pane-border-style fg='#343D46',bg=colour0
+set -g pane-border-style fg=default,bg=default
 # Active pane border
-set -g pane-active-border-style fg=colour3,bg=colour0
+set -g pane-active-border-style fg=yellow,bg=default
 # Pane number indicator
 set -g display-panes-colour default
 set -g display-panes-active-colour default
@@ -170,7 +170,7 @@ set -g status-left "#[fg=magenta][#S]#[fg=colour8]"
 # Right side of status bar
 set -g status-right-style fg=cyan
 set -g status-right-length 60
-set -g status-right "#[fg=yellow]#[fg=yellow,bold,bg=default] %a, %d %b %Y #[fg=colour8]‹#[fg=green,bg=default]#[bg=default,fg=green,bold] %H:%M#[fg=blue]"
+set -g status-right "#[fg=yellow]#[fg=yellow,bold,bg=default] %a, %d %b %Y #[fg=default]‹#[fg=green,bg=default]#[bg=default,fg=green,bold] %H:%M#[fg=blue]"
 
 
 # List of plugins
