chore: move tmux in a config folder

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -41,7 +41,7 @@ bind M-Space send-prefix
 # Same directory
 
 # Reload configuration
-bind r source-file ~/.tmux.conf
+bind r source-file $XDG_CONFIG_HOME/tmux/tmux.conf
 
 # Vim Shortcut
 set -g status-keys vi
