--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -138,9 +138,9 @@ set -g status-style bright,bg=default,fg=default
 set -g window-status-format " #I:#W#F "
 set -g window-status-current-format " #I:#W#F "
 # Current window status
-set -g window-status-current-style fg=colour111,bg=default,bright
+set -g window-status-current-style fg=blue,bg=default,bright
 # Window with activity status
-set -g window-status-activity-style bg=default,fg=colour114
+set -g window-status-activity-style bg=default,fg=green
 # Window separator
 set -g window-status-separator ""
 # Window status alignment
