--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -19,6 +19,7 @@ order += "wireless _first_"
 order += "ethernet _first_"
 order += "read_file brightness"
 order += "volume master"
+order += "cpu_temperature 0"
 order += "battery all"
 order += "tztime date"
 order += "tztime hour"
@@ -72,4 +73,9 @@ read_file brightness {
 	format = "💡 %content%"
 	path = "/home/gquittet/.cache/brightness"
 	max_characters = 3
+}
+
+cpu_temperature 0 {
+	format = "🌡 %degrees °C"
+	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input"
 }
