--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -5,40 +5,39 @@ mouse_autohide = true
 
 [colors]
 # special
-foreground      = #839496
-foreground_bold = #839496
-cursor          = #839496
+foreground      = #93a1a1
+foreground_bold = #93a1a1
+cursor          = #93a1a1
 background      = #002b36
 
 # black
-color0  = #073642
-color8  = #586e75
+color0  = #002b36
+color8  = #657b83
 
 # red
 color1  = #dc322f
-color9  = #cb4b16
+color9  = #dc322f
 
 # green
 color2  = #859900
-color10 = #586e75
+color10 = #859900
 
 # yellow
 color3  = #b58900
-color11 = #657b83
+color11 = #b58900
 
 # blue
 color4  = #268bd2
-color12 = #839496
+color12 = #268bd2
 
 # magenta
-color5  = #d33682
+color5  = #6c71c4
 color13 = #6c71c4
 
 # cyan
 color6  = #2aa198
-color14 = #93a1a1
+color14 = #2aa198
 
 # white
-color7  = #eee8d5
-color15 = #fdf6e3
-
+color7  = #93a1a1
+color15 = #cac3b0
