--- a/i3status/.config/i3status/config
+++ b/i3status/.config/i3status/config
@@ -17,9 +17,12 @@ general {
 order += "ipv6"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "cpu_temperature 0"
+order += "cpu_usage"
+order += "load"
+order += "memory"
 order += "read_file brightness"
 order += "volume master"
-order += "cpu_temperature 0"
 order += "battery all"
 order += "tztime date"
 order += "tztime hour"
@@ -70,12 +73,36 @@ wireless _first_ {
 }
 
 read_file brightness {
-	format = "💡 %content%"
-	path = "/home/gquittet/.cache/brightness"
+	format         = "💡 %content%"
+	path           = "/home/gquittet/.cache/brightness"
 	max_characters = 3
 }
 
 cpu_temperature 0 {
-	format = "🌡 %degrees °C"
-	path = "/sys/devices/platform/coretemp.0/hwmon/hwmon4/temp1_input"
+	format                 = "🌡 %degrees °C"
+	path                   = "/sys/class/thermal/thermal_zone0/temp"
+	max_threshold          = 75
+	format_above_threshold = "🥵 %degrees ⁰C"
+	separator              = false
+}
+
+cpu_usage {
+	format                 = "📈 %usage"
+	max_threshold          = 75
+	format_above_threshold = "📈 %usage"
+	separator              = false
+}
+
+load {
+	format        = "(%5min %15min)"
+	max_threshold = "4"
+	separator     = false
+}
+
+memory {
+	format             = "%used (%total)"
+	memory_used_method = "memavailable"
+	threshold_degraded = "15%"
+	threshold_critical = "5%"
+	threshold_degraded = "%used (%total)"
 }
