feat: add fzf to fish

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ NetrwTreeListing\ 2
 # fish
 fish/.config/fish/completions/kubectl.fish
 fish/.config/fish/fish_variables
+fish/.config/fish/fishd.tmp*
 
 # Script to avoid
 scripts/.local/bin/fnm
