--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -20,24 +20,7 @@
 [core]
 	ignorecase = false
 	excludesfile = ~/.config/git/gitignore
-	pager = diff-so-fancy | less --tabs=4 -RFX
-
-[color]
-	ui = true
-
-[color "diff-highlight"]
-	oldNormal = red bold
-	oldHighlight = red bold 52
-	newNormal = green bold
-	newHighlight = green bold 22
-
-[color "diff"]
-	meta = 11
-	frag = magenta bold
-	commit = yellow bold
-	old = red bold
-	new = green bold
-	whitespace = red reverse
+	; pager = diff-so-fancy | less --tabs=4 -RFX
 
 [pull]
 	rebase = true
@@ -45,3 +28,8 @@
 [commit]
 	template = ~/.config/git/gitmessage
 
+[diff]
+	tool = vscode
+
+[difftool "vscode"]
+	cmd = code --wait --diff $LOCAL $REMOTE
