fix: listen event for vim redraw

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -27,6 +27,9 @@ set-option -g set-titles on
 # Status refresh
 set -g status-interval 60
 
+# Refresh vim content
+set -g focus-events on
+
 
 # =============================================================================
 # Keybindings
