--- a/git/.config/git/config
+++ b/git/.config/git/config
@@ -21,6 +21,7 @@
 	ignorecase = false
 	excludesfile = ~/.config/git/gitignore
 	pager = diff-so-fancy | less --tabs=4 -RFX
+	editor = code --wait
 
 [pull]
 	rebase = true
