--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,4 +1,12 @@
 {
+    "coc.preferences.formatOnSaveFiletypes": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "typescriptreact"
+    ],
+    "tsserver.formatOnType": true,
+    "coc.preferences.formatOnType": true,
     "coc.source.emoji.filetypes": ["markdown"],
     "eslint.autoFixOnSave": true,
     "explorer.width": 30,
