--- a/iterm2/exported_preferences/com.googlecode.iterm2.plist
+++ b/iterm2/exported_preferences/com.googlecode.iterm2.plist
@@ -1725,7 +1725,7 @@
 	<key>UseBorder</key>
 	<false/>
 	<key>UseLionStyleFullscreen</key>
-	<true/>
+	<false/>
 	<key>VisualIndicatorForEsc</key>
 	<false/>
 	<key>findMode_iTerm</key>
