--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,26 +1,40 @@
 {
-    "coc.preferences.formatOnSaveFiletypes": [
-        "javascript",
-        "javascriptreact",
-        "typescript",
-        "typescriptreact"
-    ],
-    "tsserver.formatOnType": true,
-    "coc.preferences.formatOnType": true,
-    "coc.source.emoji.filetypes": ["markdown"],
-    "eslint.autoFixOnSave": true,
-    "explorer.width": 30,
-    "explorer.file.showHiddenFiles": true,
-    "explorer.icon.enableNerdfont": true,
-    "explorer.previewAction.onHover": false,
-    "explorer.keyMappings.global": {
-        "<cr>": ["expandable?", "expand", "open"],
-        "v": "open:vsplit"
-    },
-    "list.source.files.command": "rg",
-    "list.source.files.args": ["--files", "--hidden", "--no-ignore-vcs", "--follow", "--glob", "!{.git}"],
-    "list.source.grep.command": "rg",
-    "list.source.grep.args": ["--hidden", "--ignore-case", "--no-ignore-vcs", "--follow", "--glob", "!{.git}"],
-    "smartf.timeout": 5000,
-    "git.enableGutters": true
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "javascriptreact",
+    "typescript",
+    "typescriptreact"
+  ],
+  "tsserver.formatOnType": true,
+  "coc.preferences.formatOnType": true,
+  "coc.source.emoji.filetypes": ["markdown"],
+  "eslint.autoFixOnSave": true,
+  "explorer.width": 30,
+  "explorer.file.showHiddenFiles": true,
+  "explorer.icon.enableNerdfont": true,
+  "explorer.previewAction.onHover": false,
+  "explorer.keyMappings.global": {
+    "<cr>": ["expandable?", "expand", "open"],
+    "v": "open:vsplit"
+  },
+  "list.source.files.command": "rg",
+  "list.source.files.args": [
+    "--files",
+    "--hidden",
+    "--no-ignore-vcs",
+    "--follow",
+    "--glob",
+    "!{.git}"
+  ],
+  "list.source.grep.command": "rg",
+  "list.source.grep.args": [
+    "--hidden",
+    "--ignore-case",
+    "--no-ignore-vcs",
+    "--follow",
+    "--glob",
+    "!{.git}"
+  ],
+  "smartf.timeout": 5000,
+  "git.enableGutters": true
 }
