feat(nvim): make format on save for python, json, sh and vue

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -2,8 +2,12 @@
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
     "javascriptreact",
+    "json",
+    "python",
+    "sh",
     "typescript",
-    "typescriptreact"
+    "typescriptreact",
+    "vue"
   ],
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": true,
