feat(nvim): use native nvim virtualtext to show coc diagnostics

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -12,6 +12,9 @@
   "tsserver.formatOnType": true,
   "coc.preferences.formatOnType": true,
   "coc.source.emoji.filetypes": ["markdown"],
+  "codeLens.enable": true,
+  "diagnostic.messageTarget": "echo",
+  "diagnostic.virtualText": true,
   "eslint.autoFixOnSave": true,
   "explorer.width": 30,
   "explorer.file.showHiddenFiles": true,
