feat(nvim): install coc-diagnostics

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -13,6 +13,10 @@
   "coc.preferences.formatOnType": true,
   "coc.source.emoji.filetypes": ["markdown"],
   "codeLens.enable": true,
+  "diagnostic-languageserver.filetypes": {
+    "markdown": ["write-good", "markdownlint"],
+    "sh": "shellcheck"
+  },
   "diagnostic.messageTarget": "echo",
   "diagnostic.virtualText": true,
   "eslint.autoFixOnSave": true,
