feat(nvim): add better spell checker

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -13,6 +13,8 @@
   "coc.preferences.formatOnType": true,
   "coc.source.emoji.filetypes": ["markdown"],
   "codeLens.enable": true,
+  "cSpellExt.enableDictionaries": ["french", "medical-terms"],
+  "cSpell.language": "en,fr",
   "diagnostic-languageserver.filetypes": {
     "markdown": ["write-good", "markdownlint"],
     "sh": "shellcheck"
