--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -31,6 +31,7 @@
   "explorer.previewAction.onHover": false,
   "explorer.width": 30,
   "git.enableGutters": true,
+  "javascript.referencesCodeLens.enable": false,
   "list.source.files.args": [
     "--files",
     "--hidden",
@@ -48,5 +49,6 @@
     "--glob",
     "!{.git}"
   ],
-  "list.source.grep.command": "rg"
+  "list.source.grep.command": "rg",
+  "typescript.referencesCodeLens.enable": false
 }
