feat(nvim): add coc-cspell user word

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -1,5 +1,6 @@
 {
   "cSpell.language": "en,fr",
+  "cSpell.userWords": ["Quittet"],
   "cSpellExt.enableDictionaries": ["french", "medical-terms"],
   "coc.preferences.formatOnSaveFiletypes": [
     "javascript",
