--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -64,5 +64,6 @@
     "!{.git}"
   ],
   "list.source.grep.command": "rg",
+  "tsserver.disableAutomaticTypeAcquisition": false,
   "typescript.referencesCodeLens.enable": false
 }
