feat(nvim): install and setup prettier again

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -64,6 +64,7 @@
     "!{.git}"
   ],
   "list.source.grep.command": "rg",
+  "prettier.requireConfig": true,
   "tsserver.disableAutomaticTypeAcquisition": false,
   "typescript.referencesCodeLens.enable": false
 }
