feat(nvim): enable auto format for css

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -3,6 +3,7 @@
   "cSpell.userWords": ["Quittet"],
   "cSpellExt.enableDictionaries": ["french", "medical-terms"],
   "coc.preferences.formatOnSaveFiletypes": [
+    "css",
     "javascript",
     "javascriptreact",
     "json",
