refactor(nvim): hide coc popup and echo message

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -20,7 +20,7 @@
     "markdown": ["write-good", "markdownlint"],
     "sh": "shellcheck"
   },
-  "diagnostic.messageTarget": "echo",
+  "diagnostic.enableMessage": "never",
   "diagnostic.virtualText": true,
   "eslint.autoFixOnSave": true,
   "eslint.format.enable": true,
