refactor(tmux): add yank plugin

--- a/tmux/.config/tmux/tmux.conf
+++ b/tmux/.config/tmux/tmux.conf
@@ -92,7 +92,7 @@ unbind -T copy-mode 'MouseDragEnd1Pane'
       bind-key -T copy-mode-vi M-j select-pane -D
       bind-key -T copy-mode-vi M-k select-pane -U
       bind-key -T copy-mode-vi M-l select-pane -R
-      #bind-key -T copy-mode-vi M-\ select-pane -l
+      # bind-key -T copy-mode-vi M-\ select-pane -l
    # }
 
    # Resize {
@@ -175,6 +175,7 @@ set -g status-right "#[fg=yellow]#[fg=yellow,bold,bg=default] %a, %d %b %Y #[fg=
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 # set -g @plugin 'github_username/plugin_name'
